# Lab5-obj

projects/GraphicNode/code/: graphicnode.cc
projects/MeshResource/code/: meshresource.cc  meshresource.h
projects/ObjLoader/: CMakeLists.txt
projects/lab5/: CMakeLists.txt
projects/lab5/code/: graphicnode.cc  graphicnode.h  lab5.cc  lab5.h  meshresource.cc  meshresource.h  pointlight.cc  pointlight.h  shaderresource.cc  shaderresource.h
projects/lab5/resources/: shader.glsl
